--- a/src/pages/Profile/AdminProfile/TabUsers/TabUsers.css
+++ b/src/pages/Profile/AdminProfile/TabUsers/TabUsers.css
@@ -6,4 +6,23 @@
 .list__text {
     margin-top: 0px;
     margin-bottom: 0px;
+    width: 50%;
+}
+
+#edit__users {
+    float: right;
+    margin-top: -75px;
+    left: -75px;
+}
+
+#delete__users {
+    margin-top: -75px;
+    float: right;
+}
+
+#add__admin__button {
+    margin: 0 auto;
+    display: block;
+    margin-bottom: -50px;
+    margin-top: 30px;
 }
