day 9 pochti dodelal proekt

--- a/src/pages/PostPage/AddComment/AddComment.css
+++ b/src/pages/PostPage/AddComment/AddComment.css
@@ -6,5 +6,9 @@
 .div__post__comment {
     width: 100%;
     margin: 0 auto;
+    margin-bottom: 80px;
+}
 
+.add__centertext__log {
+    text-align: center;
 }
