--- a/src/pages/Chat/ChatItem/ChatItem.css
+++ b/src/pages/Chat/ChatItem/ChatItem.css
@@ -19,3 +19,43 @@
 .chat__btn {
     margin: 0 auto;
 }
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+#chat__list {
+    width: 75%;
+    height: 75vh;
+    overflow: hidden;
+    overflow-y: auto;
+    display: inline-block;
+}
+
+#connect__list {
+    float: right;
+    display: inline-block;
+    width: 20%;
+}
