--- a/src/pages/Posts/ListItems/ListItems.css
+++ b/src/pages/Posts/ListItems/ListItems.css
@@ -13,3 +13,15 @@
 .block__none {
     display: none;
 }
+
+.flex__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-around;
+    text-decoration: none;
+}
+
+.flex__container a {
+    text-decoration: none;
+}
